projects/examples/source/06.08.cpp
///////////////////////////////

#include <cassert>
#include <print>

///////////////////////////////

#include "06.05.hpp"
#include "06.06.hpp"

///////////////////////////////
//!!! static void f(){}

//static - функция видна только в одном юните трансляции (внутреннее связывание)
// без static это будет внешнее связывание (можем вызывать в других юнитах трансляции)
///////////////////////////////

// void test_v1() // error
// { 
//     std::print("test_v1\n");
// } 

///////////////////////////////

int main()
{
	test_v1();
	
//	test_v2(); // error

//	test_v3(); // error

	test_v4();

//  ---------------------------

	test_v5 < int > ();

//  ---------------------------

	assert(g_x1 == 1);

//	assert(g_x2 == 2); // error

//	assert(g_x3 == 3); // error

	assert(g_x4 == 4);

	assert(g_x5 == 5);

	assert(g_x6 == 6);
}

///////////////////////////////